# anchor

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: fastapi_intro.md  python_basics.md
docs/decisions/: 0001-hybrid-retrieval.md  0002-citation-format.md
evals/: run.py
evals/cases/: fastapi-001.json  python-001.json  refusal-001.json
scripts/: ingest.py  query.py
src/anchor/: config.py  logging_config.py
src/anchor/api/: main.py  schemas.py
src/anchor/eval/: harness.py  metrics.py
src/anchor/generation/: generator.py  prompts.py
src/anchor/ingestion/: chunker.py  embedder.py  pipeline.py
src/anchor/retrieval/: bm25.py  hybrid.py  vector_store.py
tests/: conftest.py  test_bm25.py  test_chunker.py  test_hybrid.py  test_metrics.py
