[project]
name = "anchor"
version = "0.1.0"
description = "Production-grade RAG with citation tracing and evaluation-first design."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Parth Sojitra", email = "psojitraswe@gmail.com" }]
keywords = ["rag", "llm", "retrieval", "evaluation", "openai"]

dependencies = [
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=anchor --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
